@@ -1,5 +1,14 @@
 2001-05-09  Martin Baulig  <baulig@suse.de>
 
+	* gnome-icon-entry.[ch]: Renamed to gnome-image-entry-component.[ch].
+
+	* gnome-image-entry-component.c: This is now a GnomeSelector component.
+
+	* gnome-image-entry.[ch]: New files; this is a GnomeSelectorClient
+	wrapper for the GnomeImageEntryComponent.
+
+2001-05-09  Martin Baulig  <baulig@suse.de>
+
 	* gnome-entry.h (gnome_entry_new): Removed `history_id' argument.
 	(gnome_entry_new_full): Likewise.
 	* gnome-file-entry.h (gnome_file_entry_new): Likewise.
